View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024780 | Open CASCADE | OCCT:Coding | public | 2014-04-01 09:16 | 2016-04-20 15:48 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0024780: Exceptions definition - move generated implementation from cxx to hxx | ||||
Description | Simplify exceptions hierarchy, make IMPLEMENT_STANDARD_EXCEPTION empty. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-01 09:16 | kgv | New Issue | |
2014-04-01 09:16 | kgv | Assigned To | => kgv |
2014-04-01 09:16 | kgv | Relationship added | child of 0024002 |
2015-07-20 14:22 |
|
Status | new => resolved |
2015-07-20 14:22 |
|
Steps to Reproduce Updated | |
2015-07-20 14:32 | kgv | Assigned To | kgv => bugmaster |
2015-07-20 14:32 | kgv | Status | resolved => reviewed |
2015-07-22 16:35 |
|
Relationship added | related to 0024947 |
2015-07-22 16:36 |
|
Note Added: 0043308 | |
2015-07-22 16:38 | git | Note Added: 0043309 | |
2015-07-23 16:44 | bugmaster | Status | reviewed => verified |
2015-07-23 16:44 | bugmaster | Resolution | open => fixed |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |