0024780: Exceptions definition - move generated implementation from cxx to hxx

Do not generate .cxx files for exception classes